# Distributed-CNN

./: .gitignore  CMakeLists.txt  README.md  cnn_serial  requirements.txt
benchmark/: plot_results.py  visualize.py
docs/: main.tex  references.bib
include/: cnn.h
include/layers/: conv.h  full.h  pool.h
include/utils/: data_loader.h
src/: cnn.c  main.c  serial_main.c
src/layers/: conv.c  full.c  pool.c
src/utils/: config.py  converter.py  data_loader.c
